# tacular

./: .gitignore  HISTORY.md  MANIFEST.in  README.md  conftest.py  create_output_jsons.py  justfile  pyproject.toml  try.py
.github/workflows/: python-package.yml
data_gen/: README.md  constants.py  create_psi_csv_mismatch.py  gen_amino_acids.py  gen_elements.py  gen_fragment_ions.py  gen_monosachs.py  gen_neutral_deltas.py  gen_proteases.py  gen_psimod.py  gen_refmol.py  gen_unimod.py  generate.py  justfile  logging_utils.py  utils.py
data_gen/data/: PSI-MOD.obo
data_gen/elements/: data.py
data_gen/generator/: constants.py  gen_amino_acids.py  gen_elements.py  gen_fragment_ions.py  gen_gno.py  gen_monosachs.py  gen_neutral_deltas.py  gen_proteases.py  gen_psimod.py  gen_refmol.py  gen_resid.py  gen_unimod.py  gen_xlmod.py  logging_utils.py  utils.py
data_gen/generator/elements/: lookup.py
data_gen/output/: psimod_mass_mismatches.csv
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: amino_acids.rst  base_classes.rst  elements.rst  index.rst  ion_types.rst  modifications.rst  monosaccharides.rst  neutral_deltas.rst  proteases.rst  refmol.rst
gen_output/: create_output_jsons.py
gen_output/gen_output/output/: amino_acids.json  elements.json  fragment_ions.json  monosaccharides.json  neutral_losses.json  proteases.json  psimodifications.json  refmols.json  unimodifications.json
jsons/: amino_acids.json  elements.json  fragment_ions.json  gnome_modifications.json  monosaccharides.json  neutral_losses.json  proteases.json  psimodifications.json  refmols.json  resid_modifications.json  unimodifications.json  xlmodifications.json
src/tacular/: __init__.py  obo_entity.py  obo_lookup.py
src/tacular/amino_acids/: dclass.py  lookup.py
src/tacular/elements/: data.py  dclass.py  lookup.py
src/tacular/gno/: __init__.py  data.py  dclass.py  lookup.py
src/tacular/ion_types/: __init__.py  data.py  dclass.py  lookup.py
src/tacular/monosaccharides/: data.py  dclass.py  lookup.py
src/tacular/neutral_deltas/: data.py  dclass.py  lookup.py
tests/: test_amino_acids.py  test_basic.py  test_element_lookup.py  test_elements.py  test_gno.py  test_ion_types.py  test_monosaccharides.py  test_neutral_deltas.py  test_obo_entity.py  test_obo_lookup.py  test_proteases.py  test_psimod.py  test_refmol.py  test_xlmod.py
(+20 files in other folders)
