[project]
name = "tacular"
version = "0.1.0"
description = "common utils for tacular ecosystem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
classifiers = [
    # TODO
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tacular"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

