[project]
name = "tacular"
dynamic = ["version"]
description = "Includes lookups for modifications, amino acids, and other data types."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
maintainers = [
    { name = "Patrick Garrett", email = "pgarrett@scripps.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tacular/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tacular"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B019",  # Use of functools.lru_cache/cache on methods - intentional for lookup performance
]

